# flash-select

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yaml  coverage.yaml  publish.yaml  tests.yaml
benchmark/: benchmark.py  benchmark_synthetic.py  datasets.py  run.sh
src/flash_select/: backends.py  flash_select.py
tests/: test_flash_select.py
